Fixed some deprecated code